# intro-haskell

./: CHANGELOG.md  intro-haskell.cabal
app/: Main.hs
