cabal-version:      2.4
name:               intro-haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Janil C Garcia Jr
maintainer:         janilcgarcia@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable intro-haskell
    main-is:          Main.hs
    default-extensions: OverloadedStrings
                      , NoMonomorphismRestriction

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
                    , conduit
                    , xml-conduit
                    , bytestring
                    , text
                    , xml-types
    hs-source-dirs:   app
    default-language: Haskell2010
